PDC-443 added bigger z-index for notifications to prevent overlapping with table

--- a/src/components/Notifications/Notifications.css
+++ b/src/components/Notifications/Notifications.css
@@ -22,7 +22,7 @@
   top: 40px;
   min-width: 300px;
   max-width: 600px;
-  z-index: 1;
+  z-index: 2;
   & .text-wrapper {
     display: flex;
     align-items: center;
